# fortfront

./: .gitignore  ACCEPTANCE_TEST_REPORT.md  ARCHITECTURAL_ANALYSIS_ISSUE_517.md  ARCHITECTURE_README.md  ARCHITECTURE_REVISION_SUMMARY.md  ARCH_SPLIT_ANALYSIS_685.md  BACKLOG.md  CI_FIX_CONFIRMATION.md  CLAUDE.md  CMakeLists.txt  CMakeLists_broken.txt  CODEGEN_ARCHITECTURE_ANALYSIS.md  DEAD.md  DESIGN.md  DOCUMENTATION_CONSOLIDATION_SUMMARY.md  DOCUMENTATION_REGRESSION_ANALYSIS.md  ECOSYSTEM.md  FIXES_IMPLEMENTED.md  FORTRUN.md  ISSUES.md  ISSUE_253_DESIGN.md  KNOWN_ISSUES.md  LICENSE  Makefile  README.md  ROADMAP.md  STATIC_LIBRARY_USAGE.md  TECHNICAL_VALIDATION_REPORT_PR_319.md  TERMINATION.md  TESTS.md  VALIDATION_REPORT_726.md  base_analyzer_mod.mod  build.sh  build_static_lib.sh  codecov.yml  compile_error.txt  debug_mlir.txt  debug_output.txt  double_free_issue.txt  event_dispatcher_module.mod  (+22 more)
.github/workflows/: ci.yml
DOCS/: AST_ARENA_ARCHITECTURE_ANALYSIS.md  AST_ARENA_MIGRATION_GUIDE.md  AST_MIGRATION.md  AST_MIGRATION_ANALYSIS.md  ERROR_HANDLING_ARCHITECTURE.md  MEMORY_SAFETY_ANALYSIS.md  MOVE_ALLOC_PERFORMANCE_ANALYSIS.md  SEMANTIC_PIPELINE_ARCHITECTURE.md  TODO_AUDIT_ANALYSIS.md  WARNING.md
app/: debug_511.f90  debug_ast.f90  debug_boundary_issue.f90  debug_derived_type.f90  debug_full_parsing.f90  debug_issue_517.f90  debug_mixed_construct.f90  debug_module_transform.f90  debug_parse_issue.f90  debug_parse_units.f90  debug_parsing_step.f90  debug_process_unit.f90  debug_program_unit_parsing.f90  debug_statement_boundary.f90  debug_statement_dispatcher.f90  debug_token_14.f90  debug_tokens.f90  debug_type_issue.f90  fortfront.f90  simple_call_debug.f90  simple_debug.f90  test_all_fixes.f90  test_comprehensive_fixes.f90  test_dead_code_detection.f90  test_exact_georg.f90  test_if_parsing.f90  test_manual_517.f90  test_multi_var_decl.f90  test_program_structure.f90  test_simple_517.f90  test_simple_undefined.f90  test_type_mismatch.f90  test_working_517.f90
bindings/rust/: Cargo.toml
bindings/rust/src/: lib.rs
data/bug-cli-redirection-486/: coverage.xml
data/bug-comment-line-main-discard-508/: coverage.xml
data/bug-mixed-constructs-488/: coverage.xml
data/cleanup-dirty-files/: coverage.xml
data/feat-arena-benchmark-suite-400/: coverage.xml
data/feat-base-arena-interface-369/: coverage.xml
data/feat-cst-ast-converter-397/: coverage.xml
data/feat-cst-basic-nodes-393/: coverage.xml
data/feat-integrate-compiler-arena-371/: coverage.xml
data/feat-migrate-ast-arena-370/: coverage.xml
data/feat-modernize-test-arena-api-454/: coverage.xml
data/fix-allocatable-strings-218/: coverage.xml
demo/: demo_call_graph.f90
docs/: ARENA_PERFORMANCE.md  AST_ARENA_MIGRATION.md  AUTOMATIC_VARIABLE_DECLARATIONS.md  CHARACTER_TYPE_GUIDE.md  COMPILER_ARENA_GUIDE.md  ERROR_HANDLING_GUIDE.md  ISSUE_362_IMPLEMENTATION.md  MIXED_CONSTRUCTS_GUIDE.md  NODE_TYPE_IDENTIFICATION.md  PARSE_DECLARATION_REFACTORING.md  README.md  SEMANTIC_EXTENSIBILITY_GUIDE.md  SEMANTIC_PIPELINE_QUICK_REFERENCE.md  STATIC_LIBRARY_GUIDE.md  STATIC_LIBRARY_INTEGRATION.md  TYPE_SAFETY_GUIDE.md  VARIABLE_DECLARATIONS.md  WINDOWS_HEAP_ISSUE.md
examples/: demo_call_graph.f90  demo_declaration_generation.f90  expression_temporary_tracking_demo.f90  external_tool_example.f90  implicit_none_checker.f90  variable_declarations_examples.md
include/: fortfront_c.h  fortfront_cpp.hpp
performance_coverage_html/: cmd_line  index.html
scripts/: README_fraud_prevention.md  analyze_dependencies.sh  ci_fraud_prevention.sh  coverage.sh  fraud_proof_validator.sh  run_arena_benchmarks.sh  test_cross_platform.sh  verify_symbols.sh
src/: error_handling.f90  error_reporting.f90  fortfront.f90  fortfront_advanced.f90  fortfront_c_interface.f90  fortfront_types.f90  fortfront_utils.f90  frontend.f90  frontend_core.f90  frontend_integration.f90  frontend_parsing.f90  frontend_parsing_boundary_detection.inc  frontend_parsing_implicit_module.inc  frontend_parsing_unit_detection.inc  frontend_transformation.f90  frontend_unified.f90  frontend_utilities.f90  input_validation.f90  intrinsic_registry.f90  json_reader.f90  json_reader.f90.backup  json_writer.f90  path_validation.f90  standardizer.f90  standardizer_core.f90  standardizer_declarations.f90  standardizer_module.f90  standardizer_program.f90  standardizer_subprograms.f90  standardizer_types.f90  string_types.f90  string_utils.f90
temp_backup/: fortfront_external_interface.f90
test/: debug_comment_issue.f90  debug_comment_pipeline.f90  debug_lexer_comments.f90  debug_parser_comments.f90.bak  debug_string_ast.f90  test_arena_benchmarks.f90  test_arr.lf  test_array_coverage.f90  test_array_features_pipeline.f90  test_array_literal_e2e.f90  test_array_slicing_codegen.f90  test_attribute_routing.f90  test_basic_real.f90  test_colon_detection.f90  test_comment_preservation.f90  test_comprehensive_coverage.f90  test_core_modules_coverage.f90  test_cycle_exit.f90  test_debug_320.f90  test_debug_boundary.f90  test_debug_inferred_type.f90  test_declaration_generation.f90  test_deferred_strings.f90  test_dimension_basic.f90  test_do_loop_issue_620.f90  test_double_colon.f90  test_exact_failing.f90  test_final_issue_320.f90  test_fortfront_arena_api.f90  test_fortfront_arena_debug.f90  test_fortfront_integration.f90  test_fortfront_semantic_api.f90  test_fortfront_type_api.f90  test_frontend_parser_array_params.f90  test_frontend_parser_derived_types.f90  test_frontend_parser_explicit_types.f90  test_frontend_parser_param_nodes.f90  test_function_param_memory_safety.f90  test_implied_debug.f90  test_implied_do_constructor.f90  (+43 more)
test/static_library/: Cargo.toml  c_test_program.c  cpp_test_program.cpp  run_static_library_tests.sh  test_c_language_linking.f90  test_cpp_language_linking.f90  test_cross_platform_compatibility.f90  test_dependency_analysis.f90  test_installation_verification.f90  test_symbol_completeness.f90
test/static_library/results/: test_c_manual  test_cpp_manual
test_data/: do_while_test.lf
test_temp/: test_implied.lf
(+863 files in other folders)
